--- a/Documents/회의록/2024-08/2024-08-12/2024-08-12. 회의록.md
+++ b/Documents/회의록/2024-08/2024-08-12/2024-08-12. 회의록.md
@@ -3,8 +3,7 @@
 
 | 날짜         | 작성자 | 참여자                   |
 | ---------- | --- | --------------------- |
-| 2024/08/12 | 심정훈 | 장정호 팀장님, 지민, 심정훈, 윤경엽 |
-
+| 2024-08-12 | 심정훈 | 장정호 팀장님, 지민, 심정훈, 윤경엽 |
 
 # 개요
 
