--- a/Documents/회의록/2024-08/2024-08-27/2024-08-27. 회의록.md
+++ b/Documents/회의록/2024-08/2024-08-27/2024-08-27. 회의록.md
@@ -48,7 +48,7 @@
 > 2. 해당 이전 작업 관련하여 작업 계획서 작성 중
 
 
-### 211 대역 이전 테스트 목적 CID 선별 및 운영 팀 교육
+## 211 대역 이전 테스트 목적 CID 선별 및 운영 팀 교육
 
 > 아래의 순서대로 운영팀 1명 선별하여 교육 예정
 
@@ -129,13 +129,13 @@
 - **화이트 리스트(PW)**
   화이트리스트의 경우 예외사업자와 동일하게 발신번호 등록 하지 않아도되나 발신번호에 대한 Validation 수행. > *1. 지역 번호 체크*, *2. 포멧 체크*
 
-
+---
 ## KisaExchange 수정
 
 > 1. [[#규격 변경]] 에서 `KISA-{Callback}` 형식으로 데이터 규격 변경
 > 2. 레디스 접속 정보, AS-IS(210대역)에서 TO-BE(211대역)으로 변경
 
-
+---
 ## DataManager 수정
 
 > 1. 수신자 신고 리스트(RP)
@@ -143,16 +143,17 @@
 > 2. 화이트 리스트(PW)
 >     등록/조회/수정/삭제 기능 및 INFODB 테이블, Redis 테이블 규격 지정 및 변경 필요. 
 
-
+---
 ## PTP 수정
 
 > 변경되는 레디스 데이터 규격에 맞춰 검칙 로직 수정
 
-
+---
 ## INFODB(218.233.240.43) 차세대 XDB 이전 작업 필요 여부 검토
 
 > 1. 기존 INFODB 의 데이터가 필요한 경우, 이전 필요 데이터 정리
 > 2. 기존 INFODB 의 데이터가 필요하지 않은 경우, 차세대 XDB에 테이블 생성 후 새롭게 데이터 적재
+
 ---
 
 
