Feat: "국가별 SMS 가이드라인 추가"
Feat: "국가별(미국, 중국, 일본, 베트남, 필리핀) SMS 가이드라인 추가"

--- a/Documents/이슈/MCMP ( Multi Channel Messaging Platform )/국내(Domestic)/에이전트/2024-04. 차세대 에이전트 CPU 사용량 폭증 이슈/2024-04. 차세대 에이전트 CPU 사용량 폭증 이슈.md
+++ b/Documents/이슈/MCMP ( Multi Channel Messaging Platform )/국내(Domestic)/에이전트/2024-04. 차세대 에이전트 CPU 사용량 폭증 이슈/2024-04. 차세대 에이전트 CPU 사용량 폭증 이슈.md
@@ -1,5 +1,5 @@
 
-#MMS #차세대_에이전트_CPU_사용량_폭증  #2024/04/03 #해결완료 
+#MMS #차세대_에이전트_CPU_사용량_폭증  #2024/04/03 #이슈해결  
 
 
 |  프로세스 명  | 버전  | 작성자 | 작성일 / 수정일  |
