--- a/Documents/회의록/2024-08/2024-08-26/2024-08-26. 회의록.md
+++ b/Documents/회의록/2024-08/2024-08-26/2024-08-26. 회의록.md
@@ -46,7 +46,7 @@ Redis 장애 테스트 항목서 작성 후 각 프로세스 담당자들과 함
 | 장정호 팀장 | SMPP SND 및 RPT 기능 개발                               |
 | 김한휘    | Redis 장애 테스트 항목서 작성 및 공유, 운영팀 협조하여 Redis 장애 테스트 진행 |
 | 심정훈    | MCMP ROUTER 해외 발송 메세지 라우팅 기능 개발                    |
-| 윤경엽    | API G/W 인입 메세지 건, SMPP 형태의 MessageDelivery 로 개발    |
+| 윤경엽    | 메세지 서버 SMPP 형태의 MessageDelivery 로 개발               |
 
 ---
 
