--- a/Documents/회의록/2024-08/2024-08-27/2024-08-27. 회의록.md
+++ b/Documents/회의록/2024-08/2024-08-27/2024-08-27. 회의록.md
@@ -38,7 +38,7 @@
 --- 
 # 센더 매니저 기능 추가
 
-> **[[2024-08-26. 서초 SK 센더 OOM 발생 이슈]] 관련**하여 프로세스 장애 발생 시 담당자에게 메세지를 통한 장애 발생 이슈 공유 기능 추가 논의 #추가_개발_이슈
+> **[[2024-08-26. 서초 SK 센더 OOM 발생 이슈]] 관련**하여 프로세스 장애 발생 시 담당자에게 메세지를 통한 장애 발생 이슈 공유 기능 추가 논의 #TODO
 
 ---
 
