--- a/Documents/이슈/MCMP ( Multi Channel Messaging Platform )/국내(Domestic)/센더/MMS/2024-08-09. SKT 직연동 센더 개행 적용 이슈/2024-08-09. SKT 직연동 센더 개행 적용 이슈.md
+++ b/Documents/이슈/MCMP ( Multi Channel Messaging Platform )/국내(Domestic)/센더/MMS/2024-08-09. SKT 직연동 센더 개행 적용 이슈/2024-08-09. SKT 직연동 센더 개행 적용 이슈.md
@@ -1,11 +1,11 @@
-
-#MMS #개행문자적용 #2024/08/12 #이슈해결 
-
-
-|     프로세스 명     | 버전  | 작성자 | 작성일 / 수정일  |
-| :------------: | :-: | :-: | :--------: |
-| 서초 / SK SMS 센더 |  -  | 심정훈 | 2024-08-26 |
-
+---
+문서 타입: 이슈
+프로세스 명: MMS 센더
+작성일: 2024/08/19
+작성자: 심정훈
+tags:
+  - "#개행문자적용"
+  - "#이슈해결"
 ---
 
 # 개요 
