--- a/Documents/이슈/MCMP ( Multi Channel Messaging Platform )/국내(Domestic)/센더/MMS/2024-08-19. HashMapStorage, OOM(OutOfMemory) 이슈.md
+++ b/Documents/이슈/MCMP ( Multi Channel Messaging Platform )/국내(Domestic)/센더/MMS/2024-08-19. HashMapStorage, OOM(OutOfMemory) 이슈.md
@@ -1,5 +1,11 @@
-
-#2024/08/19 #MMS #OOM_발생이슈 #이슈 
+---
+문서 타입: 이슈
+프로세스 명: MMS 센더
+작성자: 심정훈
+작성일: 2024/08/19
+tags:
+  - OOM_발생이슈
+---
 
 
 |     프로세스 명     | 버전  | 작성자 | 작성일 / 수정일  |
