--- a/Documents/회의록/2024-08/2024-08-13/2024-08-13. 회의록.md
+++ b/Documents/회의록/2024-08/2024-08-13/2024-08-13. 회의록.md
@@ -1,44 +1,25 @@
-#전송개발팀 #회의록 #2024/08/13 
-
-| 날짜         | 작성자 | 참여자                       |
-| ---------- | --- | ------------------------- |
-| 2024-08-13 | 심정훈 | 장정호 팀장, 지민, 김한휘, 심정훈, 윤경엽 |
-
+---
+문서 타입: 회의록
+작성일: 2024/08/13
+작성자: 심정훈
+회의 참석자:
+  - 장정호 팀장
+  - " 지민"
+  - " 김한휘"
+  - " 심정훈"
+  - " 윤경엽"
 ---
 
-# 개요
+# 목차
 
-1. RabbitMQ 성능 테스트
-2. 해외 발송 개발
+1. [[#RabbitMQ 성능테스트]]
 
 ---
 
 ## RabbitMQ 성능테스트
 
-### 담당자 
-
-> 지민
-
-### **기한**
-
-> **8월 3주차** 까지로 기한 연기
+> *담당자* : 지민
+> *기한* : **8월 3주차** 까지로 기한 연기
 
 
 ---
-
-## 해외 발송 개발
-
-### 담당자
-
-> 장정호 팀장, 지 민, 김한휘, 심정훈, 윤경엽
-
-### 해외 발송 흐름도
-
-
-
-
-
----
-
-
-
