--- a/Documents/회의록/2024-08/2024-08-27/2024-08-27. 회의록.md
+++ b/Documents/회의록/2024-08/2024-08-27/2024-08-27. 회의록.md
@@ -1,10 +1,12 @@
-#전송개발팀 #회의록 #2024/08/27
-
-
-| 날짜         | 작성자 | 참여자                   |
-| ---------- | --- | --------------------- |
-| 2024-08-27 | 심정훈 | 장정호 팀장, 김한휘, 심정훈, 윤경엽 |
-
+---
+문서 타입: 회의록
+작성일: 2024/08/27
+작성자: 심정훈
+회의 참석자:
+  - 장정호 팀장
+  - " 김한휘"
+  - " 심정훈"
+  - " 윤경엽"
 ---
 
 # 목차
