--- a/Documents/회의록/2024-08/2024-08-26/2024-08-26. 회의록.md
+++ b/Documents/회의록/2024-08/2024-08-26/2024-08-26. 회의록.md
@@ -1,13 +1,16 @@
-#전송개발팀 #회의록 #2024/08/26 
-
-
-| 날짜         | 작성자 | 참여자                   |
-| ---------- | --- | --------------------- |
-| 2024-08-26 | 심정훈 | 장정호 팀장, 김한휘, 심정훈, 윤경엽 |
-
+---
+문서 타입: 회의록
+작성일: 2024/08/26
+작성자: 심정훈
+회의 참석자:
+  - 장정호 팀장
+  - " 김한휘"
+  - " 심정훈"
+  - " 윤경엽"
 ---
 
-# 개요
+
+# 목차
 
 1. [[#해외 발송 개발]]
 2. [[#Redis 장애 테스트]]
