--- a/Documents/회의록/2024-08/2024-08-28/2024-08-28. 회의록.md
+++ b/Documents/회의록/2024-08/2024-08-28/2024-08-28. 회의록.md
@@ -1,10 +1,13 @@
-#전송개발팀 #회의록 #2024/08/28
-
-
-| 날짜         | 작성자 | 참여자                        |
-| ---------- | --- | -------------------------- |
-| 2024-08-28 | 심정훈 | 장정호 팀장, 지 민, 김한휘, 심정훈, 윤경엽 |
-
+---
+문서 타입: 회의록
+작성일: 2024/08/28
+작성자: 심정훈
+회의 참석자:
+  - 장정호 팀장
+  - " 지민"
+  - " 김한휘"
+  - " 심정훈"
+  - " 윤경엽"
 ---
 
 # 목차
