파일 속성 및 태그 정리

--- a/Documents/MCMP/국내(Domestic)/라우터/인수인계서/라우터 업무 기술서.md
+++ b/Documents/MCMP/국내(Domestic)/라우터/인수인계서/라우터 업무 기술서.md
@@ -1,5 +1,8 @@
 ---
+문서 타입: 업무 기술서
 프로세스 명: MCMP 라우터
+작성자: 이재혁
+작성일: 2024-07-11
 ---
 | 프로젝트 명 | Router Server        |        |            |
 | ------ | -------------------- | ------ | ---------- |
@@ -147,4 +150,4 @@ spring:
     config:
       enabled: true # Config Server를 사용하여 설정값을 가져 올지에 대한 여부
       uri: http://220.95.214.11:8888 # Config Server url
-      name: STD-MESSAGE #Config Server에게 요청 할 YML 파일 키
+      name: STD-MESSAGE # Config Server에게 요청 할 YML 파일 키
