--- a/Documents/이슈/MCMP ( Multi Channel Messaging Platform )/국내(Domestic)/데이터베이스/차세대 원장 DB 메모리 급증 이슈/2024-08-13. 차세대 원장 DB 메모리 급증 이슈.md
+++ b/Documents/이슈/MCMP ( Multi Channel Messaging Platform )/국내(Domestic)/데이터베이스/차세대 원장 DB 메모리 급증 이슈/2024-08-13. 차세대 원장 DB 메모리 급증 이슈.md
@@ -1,10 +1,17 @@
 ---
 문서 타입: 이슈
+프로세스 명: 원장 DB
+작성자: 심정훈
+작성일: 2024-08-13
+태그:
+  - 메모리 폭증
 ---
-#Database #이슈 #메모리_폭증 #2024/08/13
+# 목차
 
+1. [[#배경]]
+2. [[#문제 파악]]
 
-## 배경
+# 배경
 
 > 2024-08-13 14:19분 차세대 원장 DB 서버의 메모리 사용량이 약 **97 퍼센트** 로 급증. 해당 문제를 운영팀에서 Zabbix 알림을 통해 확인하여 해당 내용 전달받음
 
@@ -14,7 +21,7 @@
 	위의 메모리 사용량 추이 그래프를 보면 알 수 있듯 약 14시 19분부터 메모리 사용량이 100 퍼센트 근접할 정도로 폭증.
 
 
-## 문제 파악
+# 문제 파악
 
 차세대 원장 DB 의 메모리 사용량이 급증하는 원인을 우선 메세지 인입량 증가로 인한 단기적 메모리 사용량 증가로 예상하고 이를 확인하기 위해 **RabbitMQ 관리자 페이지** 에서 주요 사용 큐의 메세지 증가율을 확인.
 
