--- a/Documents/이슈/MCMP ( Multi Channel Messaging Platform )/국내(Domestic)/에이전트/2024-04. 차세대 에이전트 CPU 사용량 폭증 이슈/2024-04. 차세대 에이전트 CPU 사용량 폭증 이슈.md
+++ b/Documents/이슈/MCMP ( Multi Channel Messaging Platform )/국내(Domestic)/에이전트/2024-04. 차세대 에이전트 CPU 사용량 폭증 이슈/2024-04. 차세대 에이전트 CPU 사용량 폭증 이슈.md
@@ -1,17 +1,14 @@
 ---
 문서 타입: 이슈
+프로세스 명: 차세대_에이전트
+작성자: 심정훈
+작성일: 2024-04-03
+tags:
+  - CPU_사용량_폭증
+  - 해결
 ---
 
-#MMS #차세대_에이전트_CPU_사용량_폭증  #2024/04/03 #이슈해결  
-
-
-|  프로세스 명  | 버전  | 작성자 | 작성일 / 수정일  |
-| :------: | :-: | :-: | :--------: |
-| 차세대 에이전트 |  -  | 심정훈 | 2024-08-26 |
-
----
-
-# 개요 
+# 목차
 
 1. [[#배경]]
 	1. [[#당시 고객사 서버 환경]]
