--- a/Documents/회의록/2024-08/2024-08-12/2024-08-12. 회의록.md
+++ b/Documents/회의록/2024-08/2024-08-12/2024-08-12. 회의록.md
@@ -1,6 +1,6 @@
 ---
 문서 타입: 회의록
-작성일: 2024/08/12
+작성일: 2024-08-12
 작성자: 심정훈
 회의 참석자:
   - 장정호 팀장
@@ -9,10 +9,6 @@
   - " 심정훈"
   - " 윤경엽"
 ---
-
-| 날짜         | 작성자 | 참여자                   |
-| ---------- | --- | --------------------- |
-| 2024-08-12 | 심정훈 | 장정호 팀장님, 지민, 심정훈, 윤경엽 |
 
 # 개요
 
@@ -39,8 +35,8 @@
 
 ## 레빗엠큐 미러 큐, 쿼럼 큐 성능 테스트
 
-담당자 : #지민 
-기한 : #2024/08/14
+**담당자** : 지민 
+**기한** : 2024-08-14
 
 > 강남/서초 대역 구분하여 노드 수 변경하여 티피에스 저하 원인 파악 및 성능 테스트를 진행
 
