--- a/Documents/이슈/MCMP ( Multi Channel Messaging Platform )/국내(Domestic)/PTP/2024-08-12. 광고수신거부 정책 추가.md
+++ b/Documents/이슈/MCMP ( Multi Channel Messaging Platform )/국내(Domestic)/PTP/2024-08-12. 광고수신거부 정책 추가.md
@@ -1,15 +1,14 @@
 ---
 문서 타입: 이슈
+프로세스 명: MCMP PTP
+작성자: 심정훈
+작성일: 2024-08-12
+tags:
+  - 광고수신거부
+  - 해결
 ---
-#2024/08/12 #PTP #이슈 #광고수신거부 #이슈해결
 
-|  프로세스 명  | 버전  | 작성자 | 작성일 / 수정일  |
-| :------: | :-: | :-: | :--------: |
-| MCMP PTP |  -  | 심정훈 | 2024-08-12 |
-
----
-
-# 개요 
+# 목차
 
 1. [[#배경]]
 2. [[#요구사항]]
