--- a/Documents/이슈/MCMP ( Multi Channel Messaging Platform )/국내(Domestic)/센더/SMS/2024-08-26. 서초 SK 센더 OOM 발생 이슈/2024-08-26. 서초 SK 센더 OOM 발생 이슈.md
+++ b/Documents/이슈/MCMP ( Multi Channel Messaging Platform )/국내(Domestic)/센더/SMS/2024-08-26. 서초 SK 센더 OOM 발생 이슈/2024-08-26. 서초 SK 센더 OOM 발생 이슈.md
@@ -1,19 +1,15 @@
 ---
 문서 타입:
   - 이슈
-작성일: 2024/08/26
+프로세스 명: SMS 센더
 작성자: 심정훈
----
-#2024/08/26 #SMS #OOM_발생이슈 #이슈해결 
-
-
-|     프로세스 명     | 버전  | 작성자 | 작성일 / 수정일  |
-| :------------: | :-: | :-: | :--------: |
-| 서초 / SK SMS 센더 |  -  | 심정훈 | 2024-08-26 |
-
+작성일: 2024-08-26
+tags:
+  - OOM
+  - 해결
 ---
 
-# 개요
+# 목차
 
 1. [[#배경]]
 2. [[#장애 조치]]
